@@ -2,6 +2,10 @@
 Changes for Lovelysystems Elasticsearch Plugins
 ===============================================
 
+ - minor changes due to changed constructor of HashedBytesArray
+
+ - elasticsearch 0.90.2 compatibility
+
 2013/06/10 0.7.0
 ================
 
